Fixed bug on mobile version when expanding result-list. Now hides vehicle-type

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -231,7 +231,7 @@ table:hover {
 .segment{
 
   background: #F8F8F8;
-  border: 1px solid black;
+  border: 1px solid #000000;
   margin-left: 5%;
 
 }
